overlapping markers fixed, new marker, new legend

--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -16,6 +16,7 @@
 .sidebar {
   margin-left: 1rem;
   margin-right: 1rem;
+  margin-bottom: 1rem;
 }
 
 .sidebar-legend {
